<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">





        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:elevation="2dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_titulo_registro_horario"
                    style="@style/textRelog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/txt_registrar_horario"
                    android:textSize="42dp" />

                <Spinner
                    android:id="@+id/sp_dias"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="15dp" />

                <TextView
                    android:id="@+id/tv_hora_inicio"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/tv_hora_inicio"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_hora_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/blue_global"
                    android:ems="10"
                    android:hint="@string/ej_horario_registro_entrada"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/blue_global"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/tv_hora_fin"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/tv_hora_fin"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_hora_fin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:backgroundTint="@color/blue_global"
                    android:ems="10"
                    android:hint="@string/ej_horario_registro_salida"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/blue_global"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/button_send_cvs"
                    android:text="@string/btn_text_registrar_dia"
                    android:textAllCaps="false"
                    android:textColor="@color/color_send_cvs" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>





    </LinearLayout>
</LinearLayout>