<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <LinearLayout
                    android:id="@+id/titulo_reporte_quincenal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_nombre"
                        android:textAllCaps="false"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_titulo_quincenal"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seccion_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_apellido"
                        android:textAllCaps="false"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/apellido"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seccion_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_correo"
                        android:textAllCaps="false"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/correo"
                        android:textSize="20dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/go_to_modify_information"
                    style="@android:style/Widget.DeviceDefault.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_send_cvs"
                    android:text="@string/btn_txt_modificar_informacion"
                    android:textAllCaps="false"
                    android:textColor="@color/color_send_cvs"
                    android:textSize="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>