<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_container"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:elevation="2dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/blue_global"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_dia_horario"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_dia"
                        android:textColor="@color/color_send_cvs"
                        android:textSize="30dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_rc_hora_inicio"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/tv_hora_inicio"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/tv_rc_hora_final"
                        style="@style/textRelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/tv_hora_fin"
                        android:textSize="24dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>