<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.informacion_personal.ActivityInformacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_nombre"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_nombre"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_global"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue_global" />

                <TextView
                    android:id="@+id/tv_apellido"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_apellido"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_global"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue_global" />

                <TextView
                    android:id="@+id/tv_correo_electronico"
                    style="@style/textRelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/txt_correo"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_global"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue_global" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_go_to_modify_information"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_send_cvs"
                        android:text="@string/btn_txt_modificar_informacion"
                        android:textAllCaps="false"
                        android:textColor="@color/color_send_cvs"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>