<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/resultado_consulta_semanal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        app:cardCornerRadius="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="30dp"
                        android:elevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingTop="30dp">

                            <LinearLayout
                                android:id="@+id/titulo_reporte_quincenal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginBottom="10dp"
                                android:gravity="center_horizontal"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_resumen_semanal"
                                    style="@style/textRelog"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/resumen_semanal"
                                    android:textSize="32dp" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_horizontal"
                                    android:orientation="horizontal">

                                    <androidx.cardview.widget.CardView
                                        app:cardElevation="4dp"
                                        android:layout_width="130dp"
                                        android:layout_height="160dp"
                                        android:layout_margin="10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center_horizontal"
                                            android:orientation="vertical">

                                            <TextView
                                                android:id="@+id/tv_numero_dias_laborados"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_margin="10dp"
                                                android:text="@string/tv_numero_dias_laborados"
                                                android:textColor="@color/blue_global"
                                                android:textSize="64dp" />

                                            <TextView
                                                android:id="@+id/text_dias_laborados"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/txt_dias_laborados"
                                                android:textColor="@color/blue_global"
                                                android:textSize="18sp" />
                                        </LinearLayout>

                                    </androidx.cardview.widget.CardView>

                                    <androidx.cardview.widget.CardView
                                        app:cardElevation="4dp"
                                        android:layout_width="130dp"
                                        android:layout_height="160dp"
                                        android:layout_margin="10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center_horizontal"
                                            android:orientation="vertical">

                                            <TextView
                                                android:id="@+id/tv_numero_retardos"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_margin="10dp"
                                                android:text="@string/tv_numero_dias_laborados"
                                                android:textColor="@color/blue_global"
                                                android:textSize="64dp" />

                                            <TextView
                                                android:id="@+id/tex_retardos"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/txt_retardos"
                                                android:textColor="@color/blue_global"
                                                android:textSize="18sp" />
                                        </LinearLayout>

                                    </androidx.cardview.widget.CardView>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_horizontal"
                                    android:orientation="horizontal">


                                    <androidx.cardview.widget.CardView
                                        app:cardElevation="4dp"
                                        android:layout_width="130dp"
                                        android:layout_height="160dp"
                                        android:layout_margin="10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center_horizontal"
                                            android:orientation="vertical">

                                            <TextView
                                                android:id="@+id/tv_numero_faltas"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_margin="10dp"
                                                android:text="@string/tv_numero_fatlas"
                                                android:textColor="@color/blue_global"
                                                android:textSize="64dp" />

                                            <TextView
                                                android:id="@+id/tex_faltas"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/txt_fatlas"
                                                android:textColor="@color/blue_global"
                                                android:textSize="18sp" />
                                        </LinearLayout>

                                    </androidx.cardview.widget.CardView>


                                    <androidx.cardview.widget.CardView
                                        app:cardElevation="4dp"
                                        android:layout_width="130dp"
                                        android:layout_height="160dp"
                                        android:layout_margin="10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center_horizontal"
                                            android:orientation="vertical">

                                            <TextView
                                                android:id="@+id/tv_justificadas"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_margin="10dp"
                                                android:text="@string/tv_numero_justificadas"
                                                android:textColor="@color/blue_global"
                                                android:textSize="64dp" />

                                            <TextView
                                                android:id="@+id/text_justificadas"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/txt_justificadas"
                                                android:textColor="@color/blue_global"
                                                android:textSize="18sp" />
                                        </LinearLayout>

                                    </androidx.cardview.widget.CardView>


                                </LinearLayout>


                            </LinearLayout>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>